# mini-vaneger

./: Cargo.toml  config.json
src/: main.rs  settings.rs  state.rs  tab.rs  tabs_manager.rs
