[package]
name = "minivaneger"
version = "0.1.0"
edition = "2021"
authors = ["Vitaliy Busko <vitaliy.opensource@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = {version = "1.0", features=["derive"]}
druid = {version = "0.8.3", features=["im", "serde"]}
