[package]
name = "minivaneger"
version = "0.3.0"
edition = "2021"
authors = ["Vitaliy Busko <vitaliy.opensource@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = {version = "0.8", features = ["im", "serde", "image", "png"]}
serde_json = "1"
serde = {version = "1", features = ["derive"]}
ron = "0.8"
dunce = "1.0.3"
log = "0.4.17"
env_logger = "0.10.0"
